# ai-gui-mcp

./: .gitignore  AGENTS.md  README.md  config.yaml  oh-my-opencode.json  opencode.jsonc  pyproject.toml
.opencode/skills/docs-sync-consistency/: SKILL.md
.opencode/skills/spike-audit/: SKILL.md
docs/: AI-GUI-MCP-ROADMAP-v2.md  AI-GUI-MCP-ROADMAP-v3.md  FUTURE-REFERENCE.md  P1-potential-issue.md  P2-potential-issue.md  PHASE0-SPIKE.md  PHASE1-IMPLEMENTATION.md  PHASE2-IMPLEMENTATION.md  PHASE2-SPIKE-RESULTS.md  PHASE2-SPIKE.md  PHASE3A-DRAFT.md  PHASE3A-SPIKE-RESULTS.md  PHASE3A-SPIKE.md  ROADMAP.md  SPIKE-RESULTS.md
docs/spike-results/round-1/: vscode_analysis.json  vscode_elements.txt
docs/spike-results/round-2/: COMIC-setting_analysis.json  COMIC-setting_elements.txt  Desktop_analysis.json  Desktop_elements.txt  FileManager_analysis.json  FileManager_elements.txt  MessageBox-confirmation_analysis.json  MessageBox-confirmation_elements.txt  edge-bilibili-streaming_analysis.json  edge-bilibili-streaming_elements.txt  edge-bing-searching_analysis.json  edge-bing-searching_elements.txt  edge-opencode-zen_analysis.json  edge-opencode-zen_elements.txt  vscode_analysis.json  vscode_elements.txt
openspec/changes/phase3a-intelligence-layer/: design.md  tasks.md
openspec/specs/arch-c-spike-validation/: spec.md
openspec/specs/batch-executor/: spec.md
openspec/specs/bbox-format-v2/: spec.md
openspec/specs/cursor-calibration/: spec.md
openspec/specs/gui-parser-result/: spec.md
openspec/specs/input-backend-abstraction/: spec.md
openspec/specs/mcp-action-tools/: spec.md
openspec/specs/observation-store/: spec.md
openspec/specs/perception-service/: spec.md
openspec/specs/uinput-backend/: spec.md
scripts/: spike_arch_c.py  spike_pipeline_gq.py  visualize_bboxes.py
src/: config.py  models.py  server.py
src/backends/: __init__.py  base.py  portal.py  screen.py  uinput.py
src/providers/: __init__.py  a11y.py  screenshot.py  vision.py  vision_postprocess.py
src/services/: __init__.py  perception.py
src/stores/: __init__.py  observation.py
src/tests/: test_batch.py  test_gdino.py  test_keyboard.py  test_label_mapper.py  test_models_p3a.py  test_mouse.py  test_observation_store.py  test_perception.py  test_perception_service.py  test_providers.py  test_qwen_vl.py  test_vision_pipeline_gq.py  test_vision_postprocess.py
(+70 files in other folders)
