[project]
name = "ai-gui-mcp"
version = "0.1.0"
description = "MCP Server for GUI automation on Linux Wayland"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "evdev>=1.6.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
    "dbus-next>=0.2.3",
    "pillow>=12.2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]
# dbus-python and PyGObject (gi) are system packages (apt):
#   python3-dbus, python3-gi — required for dbus-python screenshot path
# Enable include-system-site-packages in venv to use them.

[project.scripts]
ai-gui-mcp = "src.server:run"

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
